--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 	  <artifactId>jersey-media-moxy</artifactId>
 	  <version>2.34</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>com.google.firebase</groupId>
+	  <artifactId>firebase-admin</artifactId>
+	  <version>8.0.1</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
